--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,6 @@
 	path = deps/libbtc
 	url = https://github.com/xloem/libbtc.git
 	branch = includedir
+[submodule "deps/secp256k1"]
+	path = deps/secp256k1
+	url = https://github.com/bitcoin-core/secp256k1.git
