working towards txs: added connect parameters, sqlitecpp dependency for storage bootstrapping, wrapping libbtc peer functions for peer communication

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "deps/secp256k1"]
 	path = deps/secp256k1
 	url = https://github.com/bitcoin-core/secp256k1.git
+[submodule "deps/sqlitecpp"]
+	path = deps/sqlitecpp
+	url = https://github.com/SRombauts/SQLiteCpp.git
