--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,9 @@
 cmake_minimum_required(VERSION 3.11)
 
+# for embedding code from bitcoin core
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
 project(libonchain)
 
 find_package(Threads REQUIRED)
@@ -7,9 +11,6 @@ find_package(PkgConfig)
 include(ExternalProject)
 
 execute_process(COMMAND git submodule update --init --recursive WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
-
-SET(SQLITECPP_RUN_CPPLINT OFF CACHE BOOL "Run cpplint.py tool within SQLiteC++")
-add_subdirectory(deps/sqlitecpp)
 
 add_library(libbtc INTERFACE)
     ExternalProject_add(
@@ -19,15 +20,34 @@ add_library(libbtc INTERFACE)
     )
     ExternalProject_Get_Property(libbtc_submodule INSTALL_DIR)
     link_directories(libbtc INTERFACE ${INSTALL_DIR}/lib)
-    include_directories(libbtc INTERFACE ${INSTALL_DIR}/include)
+    target_include_directories(libbtc INTERFACE ${INSTALL_DIR}/include)
 
     pkg_check_modules(libevent REQUIRED IMPORTED_TARGET libevent)
     
-    add_dependencies(libbtc libbtc_submodule libbtc_submodule)
+    add_dependencies(libbtc libbtc_submodule)
     target_link_libraries(libbtc INTERFACE btc PkgConfig::libevent)
 
+add_library(bitcoin_cli deps/bitcoin/src/bitcoin-cli.cpp)
+    ExternalProject_add(
+        bitcoin_submodule SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/deps/bitcoin
+        PATCH_COMMAND ./autogen.sh
+        CONFIGURE_COMMAND <SOURCE_DIR>/configure --prefix=<INSTALL_DIR> --without-bdb
+        BUILD_COMMAND "" INSTALL_COMMAND ""
+    )
+    ExternalProject_Get_Property(bitcoin_submodule BINARY_DIR)
+    add_dependencies(bitcoin_cli bitcoin_submodule)
+    target_compile_options(bitcoin_cli PRIVATE -Wno-psabi -DHAVE_CONFIG_H)
+    target_include_directories(bitcoin_cli PRIVATE
+        deps/bitcoin/src
+        ${BINARY_DIR}/src
+        deps/bitcoin/src/univalue/include
+    )
+
+SET(SQLITECPP_RUN_CPPLINT OFF CACHE BOOL "Run cpplint.py tool within SQLiteC++")
+add_subdirectory(deps/sqlitecpp)
+
 add_library(onchain src/chain.cpp src/chain_libbtc.cpp src/data.cpp src/data_sqlite.cpp)
-target_link_libraries(onchain PRIVATE Threads::Threads libbtc SQLiteCpp)
+target_link_libraries(onchain PRIVATE Threads::Threads libbtc SQLiteCpp bitcoin_cli)
 target_include_directories(onchain PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 target_compile_options(onchain PUBLIC -Wall -pedantic -Werror -Wno-unused-variable)
 
